--- a/DjvuApp.WindowsPhone/packages.config
+++ b/DjvuApp.WindowsPhone/packages.config
@@ -1,11 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="wpa81" />
-  <package id="Microsoft.Bcl" version="1.1.9" targetFramework="wpa81" />
-  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="wpa81" />
-  <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="wpa81" />
+  <package id="Microsoft.ApplicationInsights" version="0.14.0-build20632" targetFramework="wpa81" />
+  <package id="Microsoft.ApplicationInsights.RuntimeTelemetry" version="0.14.0-build20632" targetFramework="wpa81" />
+  <package id="Microsoft.ApplicationInsights.Telemetry.WindowsPhone" version="0.8.0-build10578" targetFramework="wpa81" />
+  <package id="Microsoft.ApplicationInsights.WindowsPhone" version="0.14.0-build20632" targetFramework="wpa81" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="wpa81" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="wpa81" />
+  <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.1.16-beta" targetFramework="wpa81" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="wpa81" />
   <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="wpa81" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="wpa81" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="wpa81" />
   <package id="Unity" version="3.5.1405-prerelease" targetFramework="wpa81" />
   <package id="WindowsAzure.MobileServices" version="1.3.2" targetFramework="wpa81" />
 </packages>
